parser.output
Grammar

    0 $accept: program $end

    1 program: noise functions

    2 noise: ε
    3      | noise TEXT_LINE
    4      | noise FUNCTION_SIG

    5 functions: function
    6          | functions function

    7 optional_lines: ε
    8               | optional_lines TEXT_LINE
    9               | optional_lines RETURN_STMT

   10 $@1: ε

   11 $@2: ε

   12 function: FUNCTION_HEADER $@1 optional_lines FUNCTION_SIG $@2 optional_lines LBRACE function_items RBRACE

   13 function_items: ε
   14               | function_items function_item

   15 function_item: TEXT_LINE
   16              | BLOCK_HEADER
   17              | RETURN_STMT
   18              | GOTO_STMT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    FUNCTION_HEADER <str> (258) 12
    FUNCTION_SIG <str> (259) 4 12
    LBRACE (260) 12
    RBRACE (261) 12
    BLOCK_HEADER <num> (262) 16
    GOTO_STMT <num> (263) 18
    RETURN_STMT <str> (264) 9 17
    TEXT_LINE <str> (265) 3 8 15


Nonterminals, with rules where they appear

    $accept (11)
        on left: 0
    program (12)
        on left: 1
        on right: 0
    noise (13)
        on left: 2 3 4
        on right: 1 3 4
    functions (14)
        on left: 5 6
        on right: 1 6
    optional_lines (15)
        on left: 7 8 9
        on right: 8 9 12
    function (16)
        on left: 12
        on right: 5 6
    $@1 (17)
        on left: 10
        on right: 12
    $@2 (18)
        on left: 11
        on right: 12
    function_items (19)
        on left: 13 14
        on right: 12 14
    function_item (20)
        on left: 15 16 17 18
        on right: 14


State 0

    0 $accept: • program $end

    $default  reduce using rule 2 (noise)

    program  go to state 1
    noise    go to state 2


State 1

    0 $accept: program • $end

    $end  shift, and go to state 3


State 2

    1 program: noise • functions
    3 noise: noise • TEXT_LINE
    4      | noise • FUNCTION_SIG

    FUNCTION_HEADER  shift, and go to state 4
    FUNCTION_SIG     shift, and go to state 5
    TEXT_LINE        shift, and go to state 6

    functions  go to state 7
    function   go to state 8


State 3

    0 $accept: program $end •

    $default  accept


State 4

   12 function: FUNCTION_HEADER • $@1 optional_lines FUNCTION_SIG $@2 optional_lines LBRACE function_items RBRACE

    $default  reduce using rule 10 ($@1)

    $@1  go to state 9


State 5

    4 noise: noise FUNCTION_SIG •

    $default  reduce using rule 4 (noise)


State 6

    3 noise: noise TEXT_LINE •

    $default  reduce using rule 3 (noise)


State 7

    1 program: noise functions •
    6 functions: functions • function

    FUNCTION_HEADER  shift, and go to state 4

    $default  reduce using rule 1 (program)

    function  go to state 10


State 8

    5 functions: function •

    $default  reduce using rule 5 (functions)


State 9

   12 function: FUNCTION_HEADER $@1 • optional_lines FUNCTION_SIG $@2 optional_lines LBRACE function_items RBRACE

    $default  reduce using rule 7 (optional_lines)

    optional_lines  go to state 11


State 10

    6 functions: functions function •

    $default  reduce using rule 6 (functions)


State 11

    8 optional_lines: optional_lines • TEXT_LINE
    9               | optional_lines • RETURN_STMT
   12 function: FUNCTION_HEADER $@1 optional_lines • FUNCTION_SIG $@2 optional_lines LBRACE function_items RBRACE

    FUNCTION_SIG  shift, and go to state 12
    RETURN_STMT   shift, and go to state 13
    TEXT_LINE     shift, and go to state 14


State 12

   12 function: FUNCTION_HEADER $@1 optional_lines FUNCTION_SIG • $@2 optional_lines LBRACE function_items RBRACE

    $default  reduce using rule 11 ($@2)

    $@2  go to state 15


State 13

    9 optional_lines: optional_lines RETURN_STMT •

    $default  reduce using rule 9 (optional_lines)


State 14

    8 optional_lines: optional_lines TEXT_LINE •

    $default  reduce using rule 8 (optional_lines)


State 15

   12 function: FUNCTION_HEADER $@1 optional_lines FUNCTION_SIG $@2 • optional_lines LBRACE function_items RBRACE

    $default  reduce using rule 7 (optional_lines)

    optional_lines  go to state 16


State 16

    8 optional_lines: optional_lines • TEXT_LINE
    9               | optional_lines • RETURN_STMT
   12 function: FUNCTION_HEADER $@1 optional_lines FUNCTION_SIG $@2 optional_lines • LBRACE function_items RBRACE

    LBRACE       shift, and go to state 17
    RETURN_STMT  shift, and go to state 13
    TEXT_LINE    shift, and go to state 14


State 17

   12 function: FUNCTION_HEADER $@1 optional_lines FUNCTION_SIG $@2 optional_lines LBRACE • function_items RBRACE

    $default  reduce using rule 13 (function_items)

    function_items  go to state 18


State 18

   12 function: FUNCTION_HEADER $@1 optional_lines FUNCTION_SIG $@2 optional_lines LBRACE function_items • RBRACE
   14 function_items: function_items • function_item

    RBRACE        shift, and go to state 19
    BLOCK_HEADER  shift, and go to state 20
    GOTO_STMT     shift, and go to state 21
    RETURN_STMT   shift, and go to state 22
    TEXT_LINE     shift, and go to state 23

    function_item  go to state 24


State 19

   12 function: FUNCTION_HEADER $@1 optional_lines FUNCTION_SIG $@2 optional_lines LBRACE function_items RBRACE •

    $default  reduce using rule 12 (function)


State 20

   16 function_item: BLOCK_HEADER •

    $default  reduce using rule 16 (function_item)


State 21

   18 function_item: GOTO_STMT •

    $default  reduce using rule 18 (function_item)


State 22

   17 function_item: RETURN_STMT •

    $default  reduce using rule 17 (function_item)


State 23

   15 function_item: TEXT_LINE •

    $default  reduce using rule 15 (function_item)


State 24

   14 function_items: function_items function_item •

    $default  reduce using rule 14 (function_items)
